--- a/src/css/base/_scaffolding.scss
+++ b/src/css/base/_scaffolding.scss
@@ -5,3 +5,21 @@
 *, *::before, *::after {
   box-sizing: border-box;
 }
+
+
+html {
+  font-size: $font-size-xs; // Cf. _variables.scss for pixel values
+  font-family: $font-stack;
+
+  @media (min-width: $break-sm-min) {
+    font-size: $font-size-sm;
+  }
+
+  @media (min-width: $break-md-min) {
+    font-size: $font-size-md;
+  }
+
+  @media (min-width: $break-lg-min) {
+    font-size: $font-size-lg;
+  }
+}
