--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -1,2 +1,59 @@
 // VARIABLES
 // =============================================================================
+
+
+
+// COLORS
+// =====================================
+
+$color-orange:   #fc3c00;
+$color-white:    #fff;
+$color-mist:     #ddd;
+$color-silver:   #aaa;
+$color-shadow:   #555;
+$color-charcoal: #222;
+
+
+
+// TYPOGRAPHY
+// =====================================
+
+$font-size-xs:     100%;   // 16px
+$font-size-sm:     100%;   // 16px
+$font-size-md:     112.5%; // 18px
+$font-size-lg:     125%;   // 20px
+
+$font-size-small:  1rem;
+$font-size-medium: 1.125rem;
+$font-size-large:  1.25rem;
+
+$font-stack:       Roboto, Arial, sans-serif;
+
+
+
+// HEIGHT
+// =====================================
+
+$height-row: 4rem; // 64px @ xs / 64px @ sm / 72px @ md / 80px @ lg
+
+
+
+// BREAKPOINTS
+// =====================================
+
+// Media Queries always use the initial browser font-size for
+// relative (rem/em) declarations (otherwise loops would be possible)
+
+// The pixel values in the comments are based on the assumption that the
+// majority of browsers use 16px as the default font-size
+
+$break-sm: 30em; // 480px
+$break-md: 60em; // 960px
+$break-lg: 75em; // 1200px
+
+$break-xs-max: calc($break-sm - 1px); // 480px - 1px = 479px
+$break-sm-min: $break-sm;             // 480px
+$break-sm-max: calc($break-md - 1px); // 960px - 1px = 959px
+$break-md-min: $break-md;             // 960px
+$break-md-max: calc($break-lg - 1px); // 1200px - 1px = 1199px
+$break-lg-min: $break-lg;             // 1200px
