--- a/src/css/base/_utilities.scss
+++ b/src/css/base/_utilities.scss
@@ -8,14 +8,7 @@
 // See: http://a11yproject.com/posts/how-to-hide-content/
 
 .u-sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
+  @include sr-only;
 }
 
 // Use in conjunction with .sr-only to only display content when it's focused.
@@ -23,13 +16,5 @@
 // Credit: HTML5 Boilerplate
 
 .u-sr-only-focusable {
-  &:active,
-  &:focus {
-    position: static;
-    width: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    clip: auto;
-  }
+  @include sr-only-focusable;
 }
