SVG URL is a function and not a mixin

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -33,11 +33,11 @@ Naming convention for CSS classes
 
 
 // FUNCTIONS
+@import 'functions/svg-url';
 
 
 // MIXINS
 @import 'mixins/sr-only';
-@import 'mixins/svg-url';
 
 
 // Base
