--- a/src/html/components/forms.hbs
+++ b/src/html/components/forms.hbs
@@ -6,122 +6,64 @@ description: Users input things. The server gets things.
   {{#content "content"}}
     <article class="sg-article">
       <header class="sg-article__header">
-        <h2 class="sg-article__title">Buttons</h2>
-        <p class="sg-article__description">Usually they submit forms or trigger JavaScript actions.</p>
+        <h2 class="sg-article__title">Text Inputs</h2>
+        <p class="sg-article__description">Text, password, email, etc.</p>
       </header>
 
-      <div class="sg-article__body">
-        <button class="button">Button</button>
-        <input type="submit" value="Input">
-        <a href="#" class="button">Link</a>
+      <div class="sg-article__body sg-article__body--dark">
+        <form>
+          <label for="text" class="u-sr-only">Text input</label>
+          <input type="text" id="text" placeholder="Text" class="input">
+
+          <label for="text-disabled" class="u-sr-only">Text input (disabled)</label>
+          <input type="text" id="text-disabled" placeholder="Text (disabled)" class="input" disabled>
+
+          <label for="email" class="u-sr-only">E-mail input</label>
+          <input type="email" id="email" placeholder="E-mail" class="input">
+
+          <label for="password" class="u-sr-only">Password input</label>
+          <input type="password" id="password" placeholder="Password" class="input">
+
+          <label for="search" class="u-sr-only">Search input</label>
+          <input type="search" id="search" placeholder="Search" class="input">
+
+          <label for="url" class="u-sr-only">URL input</label>
+          <input type="url" id="url" placeholder="URL" class="input">
+
+          <label for="number" class="u-sr-only">Number input</label>
+          <input type="number" id="number" placeholder="7" class="input">
+        </form>
       </div>
     </article>
 
     <article class="sg-article">
       <header class="sg-article__header">
-        <h2 class="sg-article__title">Inputs</h2>
-        <p class="sg-article__description">Text, password, checkbox etc.</p>
+        <h2 class="sg-article__title">Text Inputs (Dark)</h2>
+        <p class="sg-article__description">Text, password, email, etc.</p>
       </header>
 
       <div class="sg-article__body">
         <form>
-          <fieldset>
-            <legend>Text inputs</legend>
+          <label for="text" class="u-sr-only">Text input</label>
+          <input type="text" id="text" placeholder="Text" class="input input--dark">
 
-            <label for="text">Text input</label>
-            <input type="text" id="text" placeholder="Text">
+          <label for="text-disabled" class="u-sr-only">Text input (disabled)</label>
+          <input type="text" id="text-disabled" placeholder="Text (disabled)" class="input input--dark" disabled>
 
-            <label for="text-disabled">Text input (disabled)</label>
-            <input type="text" id="text-disabled" placeholder="Text (disabled)" disabled>
+          <label for="email" class="u-sr-only">E-mail input</label>
+          <input type="email" id="email" placeholder="E-mail" class="input input--dark">
 
-            <label for="email">E-mail input</label>
-            <input type="email" id="email" placeholder="E-mail">
+          <label for="password" class="u-sr-only">Password input</label>
+          <input type="password" id="password" placeholder="Password" class="input input--dark">
 
-            <label for="password">Password input</label>
-            <input type="password" id="password" placeholder="Password">
+          <label for="search" class="u-sr-only">Search input</label>
+          <input type="search" id="search" placeholder="Search" class="input input--dark">
 
-            <label for="search">Search input</label>
-            <input type="search" id="search" placeholder="Search">
+          <label for="url" class="u-sr-only">URL input</label>
+          <input type="url" id="url" placeholder="URL" class="input input--dark">
 
-            <label for="url">URL input</label>
-            <input type="url" id="url" placeholder="URL">
-          </fieldset>
-
-          <fieldset>
-            <legend>Numeric inputs</legend>
-
-            <label for="tel">Telephone input</label>
-            <input type="tel" id="tel" placeholder="Telephone">
-
-            <label for="number">Number input</label>
-            <input type="number" id="number" placeholder="7">
-
-            <label for="date">Date input</label>
-            <input type="date" id="date">
-
-            <label for="time">Time input</label>
-            <input type="time" id="time">
-          </fieldset>
-
-          <fieldset>
-            <legend>Checkbox</legend>
-
-            <input type="checkbox" name="checkbox" value="checkbox-1" id="checkbox-1" checked>
-            <label for="checkbox-1">Checkbox #1 (checked)</label>
-
-            <input type="checkbox" name="checkbox" value="checkbox-2" id="checkbox-2">
-            <label for="checkbox-2">Checkbox #2</label>
-
-            <input type="checkbox" name="checkbox" value="checkbox-3" id="checkbox-3" disabled>
-            <label for="checkbox-3">Checkbox #3 (disabled)</label>
-
-            <input type="checkbox" name="checkbox" value="checkbox-4" id="checkbox-4">
-            <label for="checkbox-4">Checkbox #4</label>
-
-            <input type="checkbox" name="checkbox" value="checkbox-5" id="checkbox-5" disabled checked>
-            <label for="checkbox-5">Checkbox #5 (checked, disabled)</label>
-          </fieldset>
-
-          <fieldset>
-            <legend>Radio</legend>
-
-            <input type="radio" name="radio" value="radio-1" id="radio-1" checked>
-            <label for="radio-1">Radio #1</label>
-
-            <input type="radio" name="radio" value="radio-2" id="radio-2">
-            <label for="radio-2">Radio #2</label>
-
-            <input type="radio" name="radio" value="radio-3" id="radio-3" disabled>
-            <label for="radio-3">Radio #3 (disabled)</label>
-
-            <input type="radio" name="radio" value="radio-4" id="radio-4">
-            <label for="radio-4">Radio #4</label>
-
-            <input type="radio" name="radio2" value="radio" id="radio3" disabled checked>
-            <label for="radio2">Radio (checked, disabled)</label>
-          </fieldset>
-
-          <fieldset>
-            <legend>Select</legend>
-
-            <label for="select">Select input</label>
-            <select id="select" class="form__control">
-              <option value="select-1">Option 1</option>
-              <option value="select-2">Option 2</option>
-              <option value="select-3">Option 3</option>
-              <option value="select-4">Option 4</option>
-            </select>
-          </fieldset>
-
-          <fieldset>
-            <legend>Color and file inputs</legend>
-
-            <label for="color">Color input</label>
-            <input type="color" id="color" class="form__control">
-
-            <label for="file">File input</label>
-            <input type="file" id="file" class="form__control">
-          </fieldset>
+          <label for="number" class="u-sr-only">Number input</label>
+          <input type="number" id="number" placeholder="7" class="input input--dark">
         </form>
       </div>
     </article>
@@ -132,13 +74,132 @@ description: Users input things. The server gets things.
         <p class="sg-article__description">Multi-line inputs</p>
       </header>
 
+      <div class="sg-article__body sg-article__body--dark">
+        <form>
+          <label for="textarea" class="u-sr-only">Textarea</label>
+          <textarea id="textarea" placeholder="Textarea" rows="5" class="textarea"></textarea>
+
+          <label for="textarea-disabled" class="u-sr-only">Textarea (disabled)</label>
+          <textarea id="textarea-disabled" placeholder="Textarea (disabled)" rows="5" class="textarea" disabled></textarea>
+        </form>
+      </div>
+    </article>
+
+    <article class="sg-article">
+      <header class="sg-article__header">
+        <h2 class="sg-article__title">Textarea (dark)</h2>
+        <p class="sg-article__description">Multi-line inputs</p>
+      </header>
+
       <div class="sg-article__body">
         <form>
-          <label for="textarea">Textarea</label>
-          <textarea id="textarea" placeholder="Textarea"></textarea>
+          <label for="textarea" class="u-sr-only">Textarea</label>
+          <textarea id="textarea" placeholder="Textarea" rows="5" class="textarea textarea--dark"></textarea>
 
-          <label for="textarea-disabled">Textarea (disabled)</label>
-          <textarea id="textarea-disabled" placeholder="Textarea (disabled)" disabled></textarea>
+          <label for="textarea-disabled" class="u-sr-only">Textarea (disabled)</label>
+          <textarea id="textarea-disabled" placeholder="Textarea (disabled)" rows="5" class="textarea textarea--dark" disabled></textarea>
+        </form>
+      </div>
+    </article>
+
+    <article class="sg-article">
+      <header class="sg-article__header">
+        <h2 class="sg-article__title">Radio</h2>
+      </header>
+
+      <div class="sg-article__body">
+        <form>
+          <input type="radio" name="radio" value="radio-1" id="radio-1" class="radio" checked>
+          <label for="radio-1">Radio #1</label>
+
+          <input type="radio" name="radio" value="radio-2" id="radio-2" class="radio">
+          <label for="radio-2">Radio #2</label>
+
+          <input type="radio" name="radio" value="radio-3" id="radio-3" class="radio" disabled>
+          <label for="radio-3">Radio #3 (disabled)</label>
+
+          <input type="radio" name="radio" value="radio-4" id="radio-4" class="radio">
+          <label for="radio-4">Radio #4</label>
+
+          <input type="radio" name="radio2" value="radio" id="radio2" class="radio" disabled checked>
+          <label for="radio2">Radio (checked, disabled)</label>
+        </form>
+      </div>
+    </article>
+
+    <article class="sg-article">
+      <header class="sg-article__header">
+        <h2 class="sg-article__title">Checkbox</h2>
+      </header>
+
+      <div class="sg-article__body">
+        <form>
+          <input type="checkbox" name="checkbox" value="checkbox-1" id="checkbox-1" class="checkbox" checked>
+          <label for="checkbox-1">Checkbox #1 (checked)</label>
+
+          <input type="checkbox" name="checkbox" value="checkbox-2" id="checkbox-2" class="checkbox">
+          <label for="checkbox-2">Checkbox #2</label>
+
+          <input type="checkbox" name="checkbox" value="checkbox-3" id="checkbox-3" class="checkbox" disabled>
+          <label for="checkbox-3">Checkbox #3 (disabled)</label>
+
+          <input type="checkbox" name="checkbox" value="checkbox-4" id="checkbox-4" class="checkbox">
+          <label for="checkbox-4">Checkbox #4</label>
+
+          <input type="checkbox" name="checkbox" value="checkbox-5" id="checkbox-5" class="checkbox" disabled checked>
+          <label for="checkbox-5">Checkbox #5 (checked, disabled)</label>
+        </form>
+      </div>
+    </article>
+
+    <article class="sg-article">
+      <header class="sg-article__header">
+        <h2 class="sg-article__title">Select</h2>
+      </header>
+
+      <div class="sg-article__body sg-article__body--dark">
+        <form>
+          <label for="select-1">Select input</label>
+          <select id="select-1" class="select">
+            <option value="select-1">Option 1</option>
+            <option value="select-2">Option 2</option>
+            <option value="select-3">Option 3</option>
+            <option value="select-4">Option 4</option>
+          </select>
+
+          <label for="select-2">Select input (disabled)</label>
+          <select id="select-2" class="select" disabled>
+            <option value="select-1">Option 1</option>
+            <option value="select-2">Option 2</option>
+            <option value="select-3">Option 3</option>
+            <option value="select-4">Option 4</option>
+          </select>
+        </form>
+      </div>
+    </article>
+
+    <article class="sg-article">
+      <header class="sg-article__header">
+        <h2 class="sg-article__title">Select (Dark)</h2>
+      </header>
+
+      <div class="sg-article__body">
+        <form>
+          <label for="select-1">Select input</label>
+          <select id="select-1" class="select select--dark">
+            <option value="select-1">Option 1</option>
+            <option value="select-2">Option 2</option>
+            <option value="select-3">Option 3</option>
+            <option value="select-4">Option 4</option>
+          </select>
+
+          <label for="select-2">Select input (disabled)</label>
+          <select id="select-2" class="select select--dark" disabled>
+            <option value="select-1">Option 1</option>
+            <option value="select-2">Option 2</option>
+            <option value="select-3">Option 3</option>
+            <option value="select-4">Option 4</option>
+          </select>
         </form>
       </div>
     </article>
