--- a/src/html/css/sg.scss
+++ b/src/html/css/sg.scss
@@ -304,6 +304,10 @@ $color-border:    rgb(220, 220, 220);
     }
   }
 
+  .sg-article__body--light {
+    background-color: #ddd;
+  }
+
   .sg-article__body--dark {
-    background-color: $color-secondary;
+    background-color: #222;
   }
