Add logo for MailAdmin and Kapp-Hamburg

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -53,6 +53,7 @@ Naming convention for CSS classes
 // COMPONENTS
 @import 'components/buttons';
 @import 'components/forms';
+@import 'components/logo';
 
 
 // SHAME
