Add form-field icon

--- a/src/css/components/_forms.scss
+++ b/src/css/components/_forms.scss
@@ -4,6 +4,10 @@
 
 
 
+// INPUT, TEXTAREA, SELECT
+// These share similar styles
+// =====================================
+
 .c-form-field {
   display: block;
   width: 100%;
@@ -32,6 +36,7 @@
     opacity: 1;
   }
 }
+
 
 .c-form-field--dark {
   color: $color-white;
@@ -67,6 +72,14 @@
   }
 }
 
+[type=search].c-form-field--icon {
+  background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#{$color-shadow}"><path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/></svg>');
+
+  &.c-form-field--dark {
+    background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#{$color-white}"><path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/></svg>');
+  }
+}
+
 
 
 // TEXTAREA
@@ -92,9 +105,6 @@
   padding: 0 1em;
 
   background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#{$color-shadow}"><path d="M7 10l5 5 5-5z"/></svg>');
-  background-position: right 0.2em center;
-  background-size: 1.6em;
-  background-repeat: no-repeat;
 
   &.c-form-field--dark {
     background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#{$color-white}"><path d="M7 10l5 5 5-5z"/></svg>');
@@ -104,6 +114,19 @@
     height: 2em;
     padding: 0 0.6em;
   }
+}
+
+
+
+// FORM FIELD ICON
+// =====================================
+
+.c-form-field--icon {
+  padding-right: 2.8em;
+
+  background-position: right 0.6em center;
+  background-size: 1.6em;
+  background-repeat: no-repeat;
 }
 
 
