--- a/src/html/components/forms.hbs
+++ b/src/html/components/forms.hbs
@@ -25,7 +25,7 @@ description: Users input things. The server gets things.
           <input type="password" id="password" placeholder="Password" class="c-form-field c-form-field--text">
 
           <label for="search" class="u-sr-only">Search input</label>
-          <input type="search" id="search" placeholder="Search" class="c-form-field c-form-field--text">
+          <input type="search" id="search" placeholder="Search" class="c-form-field c-form-field--text c-form-field--icon">
 
           <label for="url" class="u-sr-only">URL input</label>
           <input type="url" id="url" placeholder="URL" class="c-form-field c-form-field--text">
@@ -57,7 +57,7 @@ description: Users input things. The server gets things.
           <input type="password" id="password" placeholder="Password" class="c-form-field c-form-field--dark c-form-field--text">
 
           <label for="search" class="u-sr-only">Search input</label>
-          <input type="search" id="search" placeholder="Search" class="c-form-field c-form-field--dark c-form-field--text">
+          <input type="search" id="search" placeholder="Search" class="c-form-field c-form-field--dark c-form-field--text c-form-field--icon">
 
           <label for="url" class="u-sr-only">URL input</label>
           <input type="url" id="url" placeholder="URL" class="c-form-field c-form-field--dark c-form-field--text">
@@ -110,7 +110,7 @@ description: Users input things. The server gets things.
       <div class="sg-article__body sg-article__body--light">
         <form>
           <label for="select-1">Select input</label>
-          <select id="select-1" class="c-form-field c-form-field--select">
+          <select id="select-1" class="c-form-field c-form-field--select c-form-field--icon">
             <option value="select-1">Option 1</option>
             <option value="select-2">Option 2</option>
             <option value="select-3">Option 3</option>
@@ -118,7 +118,7 @@ description: Users input things. The server gets things.
           </select>
 
           <label for="select-2">Select input (disabled)</label>
-          <select id="select-2" class="c-form-field c-form-field--select" disabled>
+          <select id="select-2" class="c-form-field c-form-field--select c-form-field--icon" disabled>
             <option value="select-1">Option 1</option>
             <option value="select-2">Option 2</option>
             <option value="select-3">Option 3</option>
@@ -136,7 +136,7 @@ description: Users input things. The server gets things.
       <div class="sg-article__body sg-article__body--dark">
         <form>
           <label for="select-1" class="u-sr-only">Select input</label>
-          <select id="select-1" class="c-form-field c-form-field--dark c-form-field--select">
+          <select id="select-1" class="c-form-field c-form-field--dark c-form-field--select c-form-field--icon">
             <option value="select-1">Option 1</option>
             <option value="select-2">Option 2</option>
             <option value="select-3">Option 3</option>
@@ -144,7 +144,7 @@ description: Users input things. The server gets things.
           </select>
 
           <label for="select-2" class="u-sr-only">Select input (disabled)</label>
-          <select id="select-2" class="c-form-field c-form-field--dark c-form-field--select" disabled>
+          <select id="select-2" class="c-form-field c-form-field--dark c-form-field--select c-form-field--icon" disabled>
             <option value="select-1">Option 1</option>
             <option value="select-2">Option 2</option>
             <option value="select-3">Option 3</option>
