--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -51,6 +51,7 @@ Naming convention for CSS classes
 
 
 // COMPONENTS
+@import 'components/box';
 @import 'components/buttons';
 @import 'components/forms';
 @import 'components/logo';
