--- a/src/html/components/forms.hbs
+++ b/src/html/components/forms.hbs
@@ -109,7 +109,7 @@ description: Users input things. The server gets things.
 
       <div class="sg-article__body sg-article__body--light">
         <form>
-          <label for="select-1">Select input</label>
+          <label for="select-1" class="u-sr-only">Select input</label>
           <select id="select-1" class="c-form-field c-form-field--select c-form-field--icon">
             <option value="select-1">Option 1</option>
             <option value="select-2">Option 2</option>
@@ -117,7 +117,7 @@ description: Users input things. The server gets things.
             <option value="select-4">Option 4</option>
           </select>
 
-          <label for="select-2">Select input (disabled)</label>
+          <label for="select-2" class="u-sr-only">Select input (disabled)</label>
           <select id="select-2" class="c-form-field c-form-field--select c-form-field--icon" disabled>
             <option value="select-1">Option 1</option>
             <option value="select-2">Option 2</option>
