--- a/src/css/components/_forms.scss
+++ b/src/css/components/_forms.scss
@@ -204,5 +204,17 @@
 // =====================================
 
 label {
+  color: $color-shadow;
+
   cursor: pointer;
+}
+
+
+
+// LINK
+// =====================================
+
+.c-form-additional-link {
+  margin-left: 1em;
+  color: $color-shadow;
 }
