--- a/src/html/components/logo.hbs
+++ b/src/html/components/logo.hbs
@@ -6,13 +6,13 @@ description: The one and the only.
   {{#content "content"}}
     <article class="sg-article">
       <header class="sg-article__header">
-        <h2 class="sg-article__title">Dark</h2>
-        <p class="sg-article__description">Dark logo on light ground.</p>
+        <h2 class="sg-article__title">Standalone</h2>
+        <p class="sg-article__description">Dark logo for standalone use on light background.</p>
       </header>
 
       <div class="sg-article__body">
 
-        {{> includes/logo-dark}}
+        {{> includes/logo-standalone}}
 
       </div>
     </article>
@@ -20,13 +20,13 @@ description: The one and the only.
 
     <article class="sg-article">
       <header class="sg-article__header">
-        <h2 class="sg-article__title">Light</h2>
-        <p class="sg-article__description">Light logo on dark ground.</p>
+        <h2 class="sg-article__title">Header</h2>
+        <p class="sg-article__description">Light logo for the dark header.</p>
       </header>
 
       <div class="sg-article__body sg-article__body--dark">
 
-        {{> includes/logo-light}}
+        {{> includes/logo-header}}
 
       </div>
     </article>
