--- a/src/html/components/buttons.hbs
+++ b/src/html/components/buttons.hbs
@@ -30,20 +30,50 @@ description: Buttons. You click on them. They do stuff.
 
         <button class="c-button">
           <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
-          Button
+          <span class="c-button__text">Button</span>
         </button>
         <a href="#" class="c-button">
           <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
-          Link
+          <span class="c-button__text">Link</span>
         </a>
 
         <button class="c-button">
           <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
-          Button
+          <span class="c-button__text">Button</span>
         </button>
         <a href="#" class="c-button">
           <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
-          Link
+          <span class="c-button__text">Link</span>
+        </a>
+
+      </div>
+    </article>
+
+
+    <article class="sg-article">
+      <header class="sg-article__header">
+        <h2 class="sg-article__title">Button with Icon only</h2>
+        <p class="sg-article__description">The default button with an icon but no text.</p>
+      </header>
+
+      <div class="sg-article__body">
+
+        <button class="c-button">
+          <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+          <span class="c-button__text u-sr-only">Button</span>
+        </button>
+        <a href="#" class="c-button">
+          <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+          <span class="c-button__text u-sr-only">Link</span>
+        </a>
+
+        <button class="c-button">
+          <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
+          <span class="c-button__text u-sr-only">Button</span>
+        </button>
+        <a href="#" class="c-button">
+          <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
+          <span class="c-button__text u-sr-only">Link</span>
         </a>
 
       </div>
@@ -76,20 +106,50 @@ description: Buttons. You click on them. They do stuff.
 
         <button class="c-button c-button--highlight">
           <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
-          Button
+          <span class="c-button__text">Button</span>
         </button>
         <a href="#" class="c-button c-button--highlight">
           <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
-          Link
+          <span class="c-button__text">Link</span>
         </a>
 
         <button class="c-button c-button--highlight">
           <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
-          Button
+          <span class="c-button__text">Button</span>
         </button>
         <a href="#" class="c-button c-button--highlight">
           <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
-          Link
+          <span class="c-button__text">Link</span>
+        </a>
+
+      </div>
+    </article>
+
+
+    <article class="sg-article">
+      <header class="sg-article__header">
+        <h2 class="sg-article__title">Highlighted with Icon only</h2>
+        <p class="sg-article__description">The highlighted button with an icon but no text.</p>
+      </header>
+
+      <div class="sg-article__body">
+
+        <button class="c-button c-button--highlight">
+          <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+          <span class="c-button__text u-sr-only">Button</span>
+        </button>
+        <a href="#" class="c-button c-button--highlight">
+          <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+          <span class="c-button__text u-sr-only">Link</span>
+        </a>
+
+        <button class="c-button c-button--highlight">
+          <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
+          <span class="c-button__text u-sr-only">Button</span>
+        </button>
+        <a href="#" class="c-button c-button--highlight">
+          <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
+          <span class="c-button__text u-sr-only">Link</span>
         </a>
 
       </div>
