Update breakpoint variables

--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -32,15 +32,6 @@ $font-stack:   Roboto, Arial, sans-serif;
 
 
 
-// SIZING
-// =====================================
-
-// Height
-
-$height-row: 4rem; // 64px @ xs / 64px @ sm / 72px @ md / 80px @ lg
-
-
-
 // BREAKPOINTS
 // =====================================
 
@@ -50,16 +41,21 @@ $height-row: 4rem; // 64px @ xs / 64px @ sm / 72px @ md / 80px @ lg
 // The pixel values in the comments are based on the assumption that the
 // majority of browsers use 16px as the default font-size
 
-$break-sm: 30em; // 480px
-$break-md: 60em; // 960px
-$break-lg: 75em; // 1200px
+$break-sm: 30em;  // 480px
+$break-md: 60em;  // 960px
+$break-lg: 80em;  // 1280px
+$break-xl: 100em; // 1600px
 
 
 // Create min/max breakpoint variables
+// For max breakpoints we calculate em equivalent for 1px
+// (1px / 16px) = 0.0625em
 
-$break-xs-max: calc($break-sm - 1px); // 480px - 1px = 479px
-$break-sm-min: $break-sm;             // 480px
-$break-sm-max: calc($break-md - 1px); // 960px - 1px = 959px
-$break-md-min: $break-md;             // 960px
-$break-md-max: calc($break-lg - 1px); // 1200px - 1px = 1199px
-$break-lg-min: $break-lg;             // 1200px
+$break-xs-max: ($break-sm - (1px / 16px)); // 480px  - 1px = 479px
+$break-sm-min:  $break-sm;                 // 480px
+$break-sm-max: ($break-md - (1px / 16px)); // 960px  - 1px = 959px
+$break-md-min:  $break-md;                 // 960px
+$break-md-max: ($break-lg - (1px / 16px)); // 1280px - 1px = 1279px
+$break-lg-min:  $break-lg;                 // 1280px
+$break-lg-max: ($break-xl - (1px / 16px)); // 1600px - 1px = 1599px
+$break-xl-min:  $break-xl;                 // 1600px
