--- a/src/css/mixins/_sr-only.scss
+++ b/src/css/mixins/_sr-only.scss
@@ -1,5 +1,6 @@
-/* SCREENREADER ONLY
-============================================================================= */
+// SCREENREADER ONLY
+// Credit: https://github.com/h5bp/html5-boilerplate
+// =============================================================================
 
 
 
