Add domain list styling

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -54,6 +54,7 @@ Naming convention for CSS classes
 @import 'components/box';
 @import 'components/buttons';
 @import 'components/forms';
+@import 'components/list';
 @import 'components/logo';
 
 
